push code from replit to our bitbucket account

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height:100vh;
+  width:100vw;
+  color:white;
+  font-family: decimal-leading-zero;
+  background: linear-gradient(to left top, #cd1342, #c212ce);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
